--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "slim/twig-view": "^2.4",
         "firebase/php-jwt": "^5.0",
         "monolog/monolog": "^1.17",
-        "php": ">=7.1.0"
+        "php": ">=7.1.0",
+        "slim/pdo": "^1.10"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
