--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,12 @@
     "description": "The core library for Nozomi",
     "type": "library",
     "require": {
+        "php": ">=7.1.0",
         "slim/slim": "^3.1",
+        "slim/php-view": "^2.0",
+        "monolog/monolog": "^1.17",
         "slim/twig-view": "^2.4",
         "firebase/php-jwt": "^5.0",
-        "monolog/monolog": "^1.17",
-        "php": ">=7.1.0",
         "slim/pdo": "^1.10",
         "voku/anti-xss": "^4.1"
     },
