--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "slim/twig-view": "^2.4",
         "firebase/php-jwt": "^5.0",
         "slim/pdo": "^1.10",
-        "voku/anti-xss": "^4.1"
+        "voku/anti-xss": "^4.1",
+        "dflydev/fig-cookies": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
