--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "firebase/php-jwt": "^5.0",
         "slim/pdo": "^1.10",
         "voku/anti-xss": "^4.1",
-        "dflydev/fig-cookies": "^2.0"
+        "dflydev/fig-cookies": "^2.0",
+        "akrabat/ip-address-middleware": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
