--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,12 @@
     "require": {
         "php": ">=7.1.0",
         "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "slim/twig-view": "^2.4",
         "firebase/php-jwt": "^5.0",
         "slim/pdo": "^1.10",
         "voku/anti-xss": "^4.1",
-        "dflydev/fig-cookies": "^2.0",
-        "akrabat/ip-address-middleware": "^1.0"
+        "dflydev/fig-cookies": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
