--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "authors": [
         {
             "name": "afroraydude",
-            "email": "thomasray0@gmail.com"
+            "email": "afroraydude@protonmail.com"
         }
     ]
 }
